(重大更新)有了直接封装和类,可直接调用,高度可自定义化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "string.h": "c",
         "oled_ui.h": "c",
         "STDIO.H": "cpp",
-        "MATH.H": "cpp"
+        "MATH.H": "cpp",
+        "STRING.H": "cpp"
     }
 }
