修复了部分bug，准备用编码器控制ui的翻页功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "oled_ui.h": "c",
         "STDIO.H": "cpp",
         "MATH.H": "cpp",
-        "STRING.H": "cpp"
+        "STRING.H": "cpp",
+        "winapifamily.h": "c"
     }
 }
