Tween的可以被打断，更加丝滑，有了详细的备注、加入了贪吃蛇

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "limits": "c",
         "ranges": "c",
         "variant": "c",
-        "*.def": "c"
+        "*.def": "c",
+        "oled_driver.h": "c"
     }
 }
