2048游戏部分完工，但是需要加入额外的按键来判断是否退出

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "ranges": "c",
         "variant": "c",
         "*.def": "c",
-        "oled_driver.h": "c"
+        "oled_driver.h": "c",
+        "stdbool.h": "c"
     }
 }
