更新了视频的格式，使其能够快进和后退但不调用大量性能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "STDDEF.H": "cpp",
         "spi.h": "c",
         "stm32f1xx_hal.h": "c",
-        "flash.h": "c"
+        "flash.h": "c",
+        "goodapple.h": "c"
     }
 }
