特效部分完工

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
         "spi.h": "c",
         "stm32f1xx_hal.h": "c",
         "flash.h": "c",
-        "goodapple.h": "c"
+        "goodapple.h": "c",
+        "drawer.h": "c",
+        "games.h": "c"
     }
 }
